syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.aurigraph.v11.proto";
option java_outer_classname = "StorageProto";

package aurigraph.v11;

import "google/protobuf/timestamp.proto";

// StorageService - State storage and retrieval operations
service StorageService {
    // Store state data
    rpc Put(PutRequest) returns (PutResponse);

    // Retrieve state data
    rpc Get(GetRequest) returns (GetResponse);

    // Delete state data
    rpc Delete(DeleteRequest) returns (DeleteResponse);

    // Batch operations
    rpc BatchPut(BatchPutRequest) returns (BatchPutResponse);
    rpc BatchGet(BatchGetRequest) returns (BatchGetResponse);

    // Iterate over key range
    rpc Iterate(IterateRequest) returns (stream KeyValue);

    // Get state proof (Merkle proof)
    rpc GetStateProof(StateProofRequest) returns (StateProofResponse);

    // Stream state changes
    rpc StreamStateChanges(StateChangeStreamRequest) returns (stream StateChangeEvent);

    // Get storage metrics
    rpc GetStorageMetrics(StorageMetricsRequest) returns (StorageMetrics);
}

// Put request
message PutRequest {
    bytes key = 1;
    bytes value = 2;
    string namespace = 3;  // Logical grouping
    int64 ttl_seconds = 4;  // Time to live (0 = no expiry)
    bool conditional = 5;   // Only if key doesn't exist
    bytes expected_version = 6;  // Optimistic locking
}

// Put response
message PutResponse {
    bool success = 1;
    string error_message = 2;
    bytes version = 3;  // New version after write
    bytes state_root = 4;  // Updated Merkle root
    google.protobuf.Timestamp written_at = 5;
    int64 write_time_ns = 6;
}

// Get request
message GetRequest {
    bytes key = 1;
    string namespace = 2;
    int64 at_block_height = 3;  // Historical state
    bool include_proof = 4;  // Include Merkle proof
}

// Get response
message GetResponse {
    bytes value = 1;
    bool found = 2;
    bytes version = 3;
    bytes proof = 4;  // Merkle proof if requested
    google.protobuf.Timestamp last_modified = 5;
    int64 read_time_ns = 6;
}

// Delete request
message DeleteRequest {
    bytes key = 1;
    string namespace = 2;
    bytes expected_version = 3;  // Optimistic locking
}

// Delete response
message DeleteResponse {
    bool success = 1;
    string error_message = 2;
    bytes state_root = 3;
    google.protobuf.Timestamp deleted_at = 4;
}

// Batch put request
message BatchPutRequest {
    repeated KeyValue entries = 1;
    string namespace = 2;
    bool atomic = 3;  // All or nothing
}

// Batch put response
message BatchPutResponse {
    bool success = 1;
    string error_message = 2;
    int32 entries_written = 3;
    repeated string failed_keys = 4;
    bytes state_root = 5;
    google.protobuf.Timestamp completed_at = 6;
    int64 total_time_ns = 7;
}

// Batch get request
message BatchGetRequest {
    repeated bytes keys = 1;
    string namespace = 2;
    bool include_proofs = 3;
}

// Batch get response
message BatchGetResponse {
    repeated KeyValue entries = 1;
    int32 found_count = 2;
    int32 missing_count = 3;
    bytes combined_proof = 4;  // Multiproof
    int64 total_time_ns = 5;
}

// Key-value pair
message KeyValue {
    bytes key = 1;
    bytes value = 2;
    bytes version = 3;
    google.protobuf.Timestamp timestamp = 4;
}

// Iterate request
message IterateRequest {
    bytes start_key = 1;
    bytes end_key = 2;
    string namespace = 3;
    int32 limit = 4;
    bool reverse = 5;
    bytes prefix = 6;  // Key prefix filter
    bool keys_only = 7;
}

// State proof request
message StateProofRequest {
    repeated bytes keys = 1;
    string namespace = 2;
    int64 at_block_height = 3;
}

// State proof response
message StateProofResponse {
    bytes state_root = 1;
    repeated MerkleProofEntry proofs = 2;
    int64 block_height = 3;
    google.protobuf.Timestamp timestamp = 4;
    bool verified = 5;
}

// Merkle proof entry
message MerkleProofEntry {
    bytes key = 1;
    bytes value = 2;
    repeated bytes siblings = 3;
    repeated int32 path = 4;  // 0 = left, 1 = right
    bool exists = 5;
}

// State change stream request
message StateChangeStreamRequest {
    string namespace = 1;
    bytes prefix = 2;
    int64 from_block = 3;
    bool follow_head = 4;
}

// State change event
message StateChangeEvent {
    string event_type = 1;  // PUT, DELETE, UPDATE
    bytes key = 2;
    bytes old_value = 3;
    bytes new_value = 4;
    string namespace = 5;
    int64 block_height = 6;
    string transaction_hash = 7;
    bytes state_root = 8;
    google.protobuf.Timestamp timestamp = 9;
}

// Storage metrics request
message StorageMetricsRequest {
    string namespace = 1;
    google.protobuf.Timestamp from_time = 2;
    google.protobuf.Timestamp to_time = 3;
}

// Storage metrics
message StorageMetrics {
    int64 total_keys = 1;
    int64 total_size_bytes = 2;
    int64 namespace_count = 3;

    // Operation counts
    int64 total_puts = 4;
    int64 total_gets = 5;
    int64 total_deletes = 6;
    int64 total_iterations = 7;

    // Performance metrics
    double average_put_time_ms = 8;
    double average_get_time_ms = 9;
    double average_delete_time_ms = 10;
    double average_iterate_time_ms = 11;

    // Cache metrics
    int64 cache_hits = 12;
    int64 cache_misses = 13;
    double cache_hit_ratio = 14;

    // Storage utilization
    double storage_used_gb = 15;
    double storage_capacity_gb = 16;
    double utilization_percent = 17;

    // State trie metrics
    int64 trie_depth = 18;
    int64 trie_nodes = 19;
    bytes current_state_root = 20;

    google.protobuf.Timestamp measurement_time = 21;
}
